force-app/main/default/objects/Form_Collaborator__c/Form_Collaborator__c.object-meta.xml
<CustomObject>
    <label>Form Collaborator</label>
    <pluralLabel>Form Collaborators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
<nameField>
    <label>Collaborator Name</label>
    <type>Text</type>
</nameField>
</CustomObject>