force-app/main/default/objects/Form_Collaborator__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Form Collaborations</relationshipLabel>
    <relationshipName>FormCollaborations</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>