force-app/main/default/objects/Form_Collaborator__c/fields/Invited_At__c.field-meta.xml
<CustomField>
    <fullName>Invited_At__c</fullName>
    <label>Invited At</label>
    <type>DateTime</type>
</CustomField>