force-app/main/default/objects/Form_Collaborator__c/fields/Invited_By__c.field-meta.xml
<CustomField>
    <fullName>Invited_By__c</fullName>
    <label>Invited By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Invited Collaborators</relationshipLabel>
    <relationshipName>InvitedCollaborators</relationshipName>
</CustomField>