force-app/main/default/objects/Form_Collaborator__c/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <label>Permission</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
        <fullName>View</fullName>
    </value>
<value>
        <fullName>Edit</fullName>
    </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>