force-app/main/default/objects/Form_Collaborator__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Form Collaborations</relationshipLabel>
    <relationshipName>FormCollaborations</relationshipName>
</CustomField>